--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
 /* FONT FAMILYS */
+@import url('https://fonts.cdnfonts.com/css/poppins');
+@import url('https://fonts.cdnfonts.com/css/ubuntu');
+@import url('https://fonts.cdnfonts.com/css/dasher');
+@import url('https://fonts.cdnfonts.com/css/beyonders');
 
 /* VARIABLEES */
 :root{
@@ -31,6 +35,8 @@
   /* FONT FAMILYS */
   --poppins: "Poppins";
   --ubuntu: "Ubuntu";
+  --dasher: "DASHER";
+  --beyonders: "Beyonders";
 
   /* FONT WEIGHTS */
   --fw-1: 100;
