--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,20 @@
 /* FONT FAMILYS */
-@import url('https://fonts.cdnfonts.com/css/poppins');
-@import url('https://fonts.cdnfonts.com/css/ubuntu');
-@import url('https://fonts.cdnfonts.com/css/dasher');
-@import url('https://fonts.cdnfonts.com/css/beyonders');
+@import url("https://fonts.cdnfonts.com/css/poppins");
+@import url("https://fonts.cdnfonts.com/css/ubuntu");
+@import url("https://fonts.cdnfonts.com/css/dasher");
+@import url("https://fonts.cdnfonts.com/css/beyonders");
 
 /* VARIABLEES */
-:root{
-
+:root {
   /* COLORS */
   --black: #111;
-  --white: #eee;
-  --gray: #333;
-  --dager: #c90808;
+  --white: #fff;
+  --gray-22: #222;
+  --gray-15: #151515;
+  --gray-19: #191919;
+  --gray-27: #272727;
+  --gray-88: #888;
+  --dager: #b90000;
   --green: #00ce00;
   --blue: #0303a8;
 
@@ -51,18 +54,103 @@
 }
 
 /* UNIVERSAL SELECTOR */
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
 }
 
 UL,
-OL{
+OL {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
+}
+
+/* HEADER */
+.header {
+  width: 100%;
+  height: 80px;
+  background: var(--gray-15);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.header .container {
+  width: 1820px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .logo-img {
+  height: 50px;
+}
+
+.header .list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.header .list ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  letter-spacing: 1px;
+}
+
+.header .list ul li a{
+  color: var(--white);
+  font-family: var(--poppins);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: var(--fs-16);
+  transition: all .3s ease-in-out;
+  position: relative;
+}
+.header .list ul li a:hover{
+  color: var(--dager);
+}
+.header .list ul li a::before{
+  content: "";
+  width: 100px;
+  height: 2px;
+  background-color: var(--dager);
+}
+/* .header .list ul li a::after:hover{
+  width: 100%;
+} */
+
+.header .list .search-box{
+  width: 400px;
+  height: 40px;
+  background-color: var(--gray-22);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  border-radius: 50px;
+  gap: 1rem;
+}
+.header .list .search-box i{
+  font-size: var(--fs-16);
+  color: var(--white);
+}
+.header .list .search-box .search{
+  width: 80%;
+  height: 40px;
+  outline: none;
+  border: none;
+  color: var(--white);
+  font-size: var(--fs-16);
+  background-color: transparent;
 }
