--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 80px;
+  padding: 10rem 0;
 }
 
 .hero-section {
@@ -19,9 +19,9 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 4;
-  grid-template-rows: 7;
-  gap: 8px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  gap: 1.2rem;
 }
 .div5 {
   grid-column-start: 4;
@@ -107,6 +107,13 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 10px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+  z-index: 998;
+}
+
+.main .card:hover {
+  transform: scale(1.04);
 }
 
 .main .card h4 {
@@ -123,5 +130,5 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 1rem;
+  border-radius: .6rem;
 }
