--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@
   height: 100%;
 }
 
-.hero-section .container{
+.hero-section .cont{
   width: 100%;
   margin: 0 auto;
   display: grid;
@@ -98,7 +98,7 @@
 
 .main .card {
   width: 425px;
-  height: 350px;
+  height: 500px;
   background-color: var(--gray-22);
   padding: 15px;
   border-radius: 1rem;
@@ -106,10 +106,18 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   cursor: pointer;
   transition: all .2s ease-in-out;
   z-index: 998;
+}
+
+.main .card .card-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .main .card:hover {
@@ -120,6 +128,11 @@
   color: var(--white);
   font-family: var(--poppins);
   text-transform: uppercase;
+  font-weight: var(--fw-5);
+}
+.main .card p {
+  color: var(--white);
+  font-family: var(--poppins);
   font-weight: var(--fw-5);
 }
 
