--- a/style/main.css
+++ b/style/main.css
@@ -2,7 +2,7 @@
 .main {
   width: 100%;
   height: 100%;
-  background-color: var(--gray-11);
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,7 +98,7 @@
 
 .main .card {
   width: 425px;
-  height: 500px;
+  height: 450px;
   background-color: var(--gray-22);
   padding: 15px;
   border-radius: 1rem;
@@ -138,10 +138,17 @@
 
 .main .card .card-img {
   width: 100%;
-  height: 267px;
-  background-image: url("../assets/img/movie/image.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: .6rem;
+}
+
+.not-found {
+  text-align: center;
+  color: var(--dager);
+  font-family: var(--poppins);
+  font-weight: var(--fw-6);
+  font-size: var(--fs-36);
+  text-transform: uppercase;
 }
