--- a/style/main.css
+++ b/style/main.css
@@ -109,7 +109,7 @@
   gap: 20px;
   cursor: pointer;
   transition: all .2s ease-in-out;
-  z-index: 998;
+  /* z-index: 998; */
 }
 
 .main .card .card-info {
